# WsgiBoostServer

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.rst  Compilation.rst  License.txt  Readme.rst  WsgiBoostServer.sln  appveyor.py  appveyor.yml  setup.py  travis.py
benchmarks/: benchmarks.rst  cherry_bench.py  node_app.js  test_app.py  waitress_bench.py  wsgi_boost_bench.py
examples/: django_example.py  examples.pyproj  flask_example.py  hello.py  hello_example.py  server.py
examples/django_example/django_example/: __init__.py  settings.py  urls.py  wsgi.py
examples/django_project/example_project/: settings.py  urls.py  wsgi.py
examples/django_project/templates/: template.html
examples/templates/: template.html
test_wsgi_boost/: bott.py  catch.h  dh2048.pem  dh512.pem  german.txt  index.html  run_tests.bat  server.crt  server.key  server.py  test_wsgi_boost.pyproj  test_wsgi_boost.vcxproj  test_wsgi_boost.vcxproj.filters  tests.cpp  tests.py  vs_run_tests.bat
wsgi_boost/: connection.cpp  connection.h  constants.h  exceptions.h  io_service_pool.cpp  io_service_pool.h  request.cpp  request.h  request_handlers.cpp  request_handlers.h  response.cpp  response.h  server.cpp  server.h  server_http.h  server_https.h  utils.cpp  utils.h  version.h  wsgi_boost.cpp  wsgi_boost.vcxproj  wsgi_boost.vcxproj.filters
